--- a/style.css
+++ b/style.css
@@ -1,10 +1,10 @@
 .jumbotron {
   padding-top: 6rem;
-  background-color: #797a82;
+  background-color: #8acac1;
 }
 
 #projects {
-  background-color: #797a82;
+  background-color: #8acac1;
 }
 
 section {
